--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "@worldview/way-engine": "*",
+    "d3": "^7.9.0",
     "next": "^16.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
